# PEDP-Network-Map

./: .gitignore  EDITING_GUIDE.md  GITHUB_PAGES_SETUP.md  HYPOTHETICAL_NETWORK.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SHEETS_SETUP.md  pyproject.toml  verify_setup.py
.beads/: issues.jsonl
.github/workflows/: deploy.yml
data/: funders_to_add.csv  new_orgs_to_add.csv
data/processed/: colors.csv  edges.csv  edges_hypothetical.csv  node_positions.csv  node_positions_hypothetical.csv  nodes.csv  nodes_hypothetical.csv
notebooks/: network_preview.html  network_preview_hypothetical.html  network_visualization.ipynb  network_visualization_hypothetical.ipynb
scripts/: add_hypothetical_watermark.py  build_hypothetical_visualization.py  build_visualizations.sh  calculate_node_positions.py  extract_funders.py  extract_new_orgs.py  extract_pedp_funders.py  generate_funders_csv.py  generate_hypothetical_network.py  generate_pedp_funders_csv.py  sync_from_sheets.py  test_sheets_access.py
